# api

./: .gitignore  Dockerfile  README.md  bash.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: djangotest.yml  docker-image.yml
api/: admin.py  ctyper.py  models.py  tests.py  views.py
data/: db.sqlite3
djangoapi/: asgi.py  settings.py  urls.py  wsgi.py
