[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
dynamic = ["version"]
description = "api handling backend for my personal website"
authors = [
  { name = "Sped0n<github.com/Sped0n>", email = "realsped0n@outlook.com" },
]
requires-python = ">=3.11.0"
dependencies = [
  "APScheduler==3.10.4",
  "Django==4.2.4",
  "django_apscheduler==0.6.2",
  "djangorestframework==3.14.0",
  "Requests==2.31.0",
]
